--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
   "bugs": {
     "url": "https://github.com/teslahunt/images/issues"
   },
-  "keywords": [],
+  "keywords": [
+    "tesla",
+    "tesla-api",
+    "teslaapi",
+    "teslamotors"
+  ],
   "dependencies": {
     "cheerio": "~1.0.0-rc.5",
     "got": "~11.8.1",
