--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "images",
+  "name": "tesla-images",
   "description": "Get Tesla vehicles images from Tesla inventory or 3D visualization",
   "homepage": "https://nicedoc.io/teslahunt/images",
   "version": "1.0.1",
