--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "cheerio": "~1.0.0-rc.10",
     "got": "~11.8.2",
     "p-reflect": "~2.1.0",
-    "qsm": "~2.1.2",
     "reachable-url": "~1.6.0"
   },
   "devDependencies": {
@@ -57,6 +56,7 @@
     "node": ">= 12"
   },
   "files": [
+    "constants.js",
     "generate.js",
     "index.js",
     "inventory.js"
