--- a/package.json
+++ b/package.json
@@ -43,14 +43,12 @@
     "visualization",
     "viz"
   ],
-  "dependencies": {
-    "reachable-url": "~1.7.0"
-  },
   "devDependencies": {
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
     "@ksmithut/prettier-standard": "latest",
-    "ava": "latest",
+    "ava": "5",
+    "browserless": "latest",
     "c8": "latest",
     "ci-publish": "latest",
     "conventional-github-releaser": "latest",
@@ -59,6 +57,9 @@
     "nano-staged": "latest",
     "npm-check-updates": "latest",
     "p-map": "4",
+    "puppeteer": "latest",
+    "reachable-url": "latest",
+    "signal-exit": "latest",
     "simple-git-hooks": "latest",
     "standard": "latest",
     "standard-markdown": "latest",
@@ -87,8 +88,8 @@
   "license": "MIT",
   "ava": {
     "files": [
-      "!test/util.js",
-      "test/**/*.js"
+      "test/**/*.js",
+      "!test/util.js"
     ]
   },
   "commitlint": {
