--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "nano-staged": "latest",
     "npm-check-updates": "latest",
     "p-map": "4",
-    "puppeteer": "21",
+    "puppeteer": "latest",
     "reachable-url": "latest",
     "signal-exit": "latest",
     "simple-git-hooks": "latest",
